src/objects/Case.object
<CustomObject>
    <fields>
        <fullName>Closed_By_Department_Name__c</fullName>
        <label>Closed By Department Name</label>
        <picklist>
            <picklistValues>
                <fullName>Dummy 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy 3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Closed_By__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Closed By</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Created_By_Department_Name__c</fullName>
        <label>Created By Department Name</label>
        <picklist>
            <picklistValues>
                <fullName>Dummy 1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy 2</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dummy 3</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Implementation</label>
        <referenceTo>AIA_Implementation__c</referenceTo>
        <relationshipLabel>Cases</relationshipLabel>
        <relationshipName>Cases</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Issue_Category__c</fullName>
        <label>Issue Category</label>
        <picklist>
            <picklistValues>
                <fullName>Pre-Sales</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Structure &amp; Admin Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Design &amp; Creation of NAEGS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Open Enrollment, Materials &amp; Support</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Coding, Loading and Testing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Enrollment &amp; ID Card Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Post Sales Document Generation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Billing (Monthly) Invoices</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account &amp; Member Tools</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Frequency__c</fullName>
        <label>Issue Frequency</label>
        <picklist>
            <picklistValues>
                <fullName>Account Specific</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Global</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Multiple Accounts</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Issue_Sub_Category__c</fullName>
        <inlineHelpText>This field is dependent on Issue Category</inlineHelpText>
        <label>Issue Sub Category</label>
        <picklist>
            <controllingField>Issue_Category__c</controllingField>
            <picklistValues>
                <fullName>RFP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mental Health Parity</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ARC Approval</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Request for Quote</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sold</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Confirmation of Sales/Group Paperwork</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Account Kick-off Meeting</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Group Structure</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Implementation Plan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Design Doc</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>EDC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Create MM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benefit Setup</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CYC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CYC BF App</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Enrollment</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ID Cards</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR Wellness</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup CVS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Davis</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Magellan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Setup Facets Dental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Carve-out RX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Private Exchange</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Perf Guarantee</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ASA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FP CFL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BAA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Accm Cnt Svcs</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Members_Impacted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Members Impacted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Performance_Guarantee_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Performance Guarantee Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>System_In_Which_Issue_Logged__c</fullName>
        <label>System In Which Issue Logged</label>
        <picklist>
            <picklistValues>
                <fullName>AIA</fullName>
            </picklistValues>
            <restrictedPicklist>true</restrictedPicklist>
        </picklist>
        <type>Picklist</type>
    </fields>
    <validationRules>
        <fullName>ECSE021</fullName>
        <active>true</active>
        <description>if Implementation is entered, then Issue Category are required</description>
        <errorConditionFormula>RecordType.Name  =&apos;AIA Account Issue&apos;&amp;&amp; IF(   Implementation__c = null &amp;&amp; Implementation__c = &apos;&apos; ,false,IF(ISBLANK(TEXT( Issue_Category__c )),true,false))</errorConditionFormula>
        <errorDisplayField>Issue_Category__c</errorDisplayField>
        <errorMessage>ECSE021 : If Implementation field is not blank than Issue Category field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECSE022</fullName>
        <active>true</active>
        <description>If Issue Frequency is Global then Account cannot have a value</description>
        <errorConditionFormula>RecordType.Name =&apos;AIA Account Issue&apos; &amp;&amp; IF( ISPICKVAL( Issue_Frequency__c ,&apos;Global&apos;),IF(  AccountId &lt;&gt;  null &amp;&amp;  AccountId &lt;&gt; &apos;&apos; ,true,false),false)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>ECSE022 : If Issue Frequency is &quot;Global&quot; then Account cannot have a value</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECSE023</fullName>
        <active>true</active>
        <description>if Implementation is entered, then Issue Category are required</description>
        <errorConditionFormula>RecordType.Name  =&apos;AIA Account Issue&apos; &amp;&amp; IF(  Implementation__c = null &amp;&amp; Implementation__c = &apos;&apos; ,false,IF(ISBLANK(TEXT(  Issue_Sub_Category__c  )),true,false))</errorConditionFormula>
        <errorDisplayField>Issue_Sub_Category__c</errorDisplayField>
        <errorMessage>ECSE023 : If Implementation field is not blank than Issue Sub Category field cannot be blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ECSE024</fullName>
        <active>true</active>
        <description>If Issue Frequency is Account Specific then Account cannot be blank</description>
        <errorConditionFormula>RecordType.Name =&apos;AIA Account Issue&apos; &amp;&amp; IF( ISPICKVAL( Issue_Frequency__c ,&apos;Account Specific&apos;),IF(  AccountId =  null &amp;&amp;  AccountId = &apos;&apos; ,true,false),false)</errorConditionFormula>
        <errorDisplayField>AccountId</errorDisplayField>
        <errorMessage>ECS024 : If Issue Frequency =&apos;&quot;Account Specific&quot; then Account cannot be blank</errorMessage>
    </validationRules>
</CustomObject>